--- a/pages/abrir-conta-form.html
+++ b/pages/abrir-conta-form.html
@@ -158,8 +158,9 @@
             <h2 class="rodape__logo"><span class="rodape__logo--negrito">Moni</span>Bank</h2>
         </section>
     </footer>
-    <script src="/js/script.js" type="module"></script>
-    <script src="/js/valida-cpf.js" type="module"></script>
+    <script src="../js/script.js" type="module"></script>
+    <script src="../js/valida-cpf.js" type="module"></script>
+    <script src="../js/valida-idade.js" type="module"></script>
 </body>
 
 </html>
